feat: CRUD Competence